# gdal-segment

./: CMakeLists.txt  INSTALL.md  README.md  clean.sh
include/: gdal-segment.hpp
samples/: 1-segment.sh
src/: CMakeLists.txt  gdal-segment.cpp
src/io/: raster.cpp  vector.cpp
